--- a/magicmethods.tex
+++ b/magicmethods.tex
@@ -300,6 +300,8 @@ Defines behavior for when \code{str()} is called on an instance of your class.
 Defines behavior for when \code{repr()} is called on an instance of your class. The major difference between \code{str()} and \code{repr()} is intended audience. \code{repr()} is intended to produce output that is mostly machine-readable (in many cases, it could be valid Python code even), whereas \code{str()} is intended to be human-readable.
 \item[\code{__unicode__(self)}]
 Defines behavior for when \code{unicode()} is called on an instance of your class. \code{unicode()} is like \code{str()}, but it returns a unicode string. Be wary: if a client calls \code{str()} on an instance of your class and you've only defined \code{__unicode__()}, it won't work. You should always try to define \code{__str__()} as well in case someone doesn't have the luxury of using unicode.
+\item[\code{__format__(self, formatstr)}]
+Defines behavior for when an instance of your class is used in new-style string formatting. For instance, \code{"Hello, {0:abc}!".format(a)} would lead to the call \code{a.__format__("abc")}. This can be useful for defining your own numerical or string types that you might like to give special formatting options.
 \item[\code{__hash__(self)}]
 Defines behavior for when \code{hash()} is called on an instance of your class. It has to return an integer, and its result is used for quick key comparison in dictionaries. Note that this usually entails implementing \code{__eq__} as well. Live by the following rule: \code{a == b} implies \code{hash(a) == hash(b)}.
 \item[\code{__nonzero__(self)}]
