--- a/magicmethods.tex
+++ b/magicmethods.tex
@@ -612,7 +612,7 @@ $Magic\ Method$ & $When\ it\ gets\ invoked$ & $Explanation$\\
 \hline
 \code{__delattr__(self, name)} & \code{del self.name} & Deleting an attribute\\
 \hline
-\code{__getattribute(self, name)} & \code{self.name} & Accessing any attribute\\
+\code{__getattribute__(self, name)} & \code{self.name} & Accessing any attribute\\
 \hline
 \code{__getitem__(self, key)} & \code{self[key]} & Accessing an item using an index\\
 \hline
