Link to Python documentation for ABCs (gives it better treatment than I could), which use a magic method . Closes #23

--- a/magicmethods.tex
+++ b/magicmethods.tex
@@ -413,6 +413,10 @@ Checks if a class subclasses the class you defined (e.g. \code{issubclass(subcla
 
 The use case for these magic methods might seem small, and that may very well be true. I won't spend too much more time on reflection magic methods because they aren't very important, but they reflect something important about object-oriented programming in Python and Python in general: there is almost always an easy way to do something, even if it's rarely necessary. These magic methods might not seem useful, but if you ever need them you'll be glad that they're there (and that you read this guide!).
 
+\section{Abstract Base Classes}
+
+See http://docs.python.org/2/library/abc.html.
+
 \section{Callable Objects}
 
 As you may already know, in Python, functions are first-class objects. This means that they can be passed to functions and methods just as if they were objects of any other kind. This is an incredibly powerful feature.
