--- a/magicmethods.tex
+++ b/magicmethods.tex
@@ -589,7 +589,7 @@ The goal of this guide is to bring something to anyone that reads it, regardless
 
 % Begin the appendix
 \newpage
-\section{Appendix: How to Call Magic Methods}
+\section{Appendix 1: How to Call Magic Methods}
 
 Some of the magic methods in Python directly map to built-in functions; in this case, how to invoke them is fairly obvious. However, in other cases, the invocation is far less obvious. This appendix is devoted to exposing non-obvious syntax that leads to magic methods getting called.
 \begin{center}
@@ -643,5 +643,17 @@ $Magic\ Method$ & $When\ it\ gets\ invoked$ & $Explanation$\\
 \hline
 \end{tabular}
 \end{center}
+
+\section{Appendix 2: Changes in Python 3}
+
+Here, we document a few major places where Python 3 differs from 2.x in terms of its object model:
+
+\begin{itemize}
+  \item Since the distinction between string and unicode has been done away with in Python 3, \code{__unicode__} is gone and \code{__bytes__} (which behaves similarly to \code{__str__} and \code{__unicode__} in 2.7) exists for a new built-in for constructing byte arrays.
+  \item Since division defaults to true division in Python 3, \code{__div__} is gone in Python 3
+  \item \code{__coerce__} is gone due to redundancy with other magic methods and confusing behavior
+  \item \code{__cmp__} is gone due to redundancy with other magic methods
+  \item \code{__nonzero__} has been renamed to \code{__bool__}
+\end{itemize}
 
 \end{document}
