Describe circumstances when reflected operator magic methods are called. Fixes #35

--- a/magicmethods.tex
+++ b/magicmethods.tex
@@ -184,7 +184,7 @@ other + some_object
 \end{lstlisting}
 
 \noindent
-So, all of these magic methods do the same thing as their normal equivalents, except the perform the operation with other as the first operand and self as the second, rather than the other way around. In most cases, the result of a reflected operation is the same as its normal equivalent, so you may just end up defining \code{__radd__} as calling \code{__add__} and so on. Without further ado:
+So, all of these magic methods do the same thing as their normal equivalents, except the perform the operation with other as the first operand and self as the second, rather than the other way around. In most cases, the result of a reflected operation is the same as its normal equivalent, so you may just end up defining \code{__radd__} as calling \code{__add__} and so on. Note that the object on the left hand side of the operator (\code{other} in the example) must not define (or return \code{NotImplemented}) for its definition of the non-reflected version of an operation. For instance, in the example, \code{some_object.__radd__} will only be called if `other` does not define \code{__add__}.
 
 \begin{description}
 
