--- a/magicmethods.tex
+++ b/magicmethods.tex
@@ -380,7 +380,7 @@ Defines behavior for when an item is deleted (e.g. \code{del self[key]}). This i
 \item[\code{__iter__(self)}]
 Should return an iterator for the container. Iterators are returned in a number of contexts, most notably by the \code{iter()} built in function and when a container is looped over using the form \code{for x in container:}. Iterators are their own objects, and they also must define an \code{__iter__} method that returns \code{self}.
 \item[\code{__reversed__(self)}]
-Called to implement behavior for the \code{reversed()} built in function. Should return a reversed version of the list.
+Called to implement behavior for the \code{reversed()} built in function. Should return a reversed version of the sequence. Implement this only if the sequence class is ordered, like list or tuple.
 \item[\code{__contains__(self, item)}]
 \code{__contains__} defines behavior for membership tests using \code{in} and \code{not in}. Why isn't this part of a sequence protocol, you ask? Because when \code{__contains__} isn't defined, Python just iterates over the sequence and returns \code{True} if it comes across the item it's looking for.
 \item[\code{__missing__(self, key)}]
