--- a/magicmethods.tex
+++ b/magicmethods.tex
@@ -149,7 +149,7 @@ Implements integer division using the \code{//} operator.
 Implements division using the \code{/} operator.
 \item[\code{__truediv__(self, other)}]
 Implements _true_ division. Note that this only works when \code{from __future__ import division} is in effect.
-\item[\code{__mod_(self, other)}]
+\item[\code{__mod__(self, other)}]
 Implements modulo using the \code{\%} operator.
 \item[\code{__divmod__(self, other)}]
 Implements behavior for long division using the \code{divmod()} built in function.
@@ -200,7 +200,7 @@ Implements reflected integer division using the \code{//} operator.
 Implements reflected division using the \code{/} operator.
 \item[\code{__rtruediv__(self, other)}]
 Implements reflected _true_ division. Note that this only works when \code{from __future__ import division} is in effect.
-\item[\code{__rmod_(self, other)}]
+\item[\code{__rmod__(self, other)}]
 Implements reflected modulo using the \code{\%} operator.
 \item[\code{__rdivmod__(self, other)}]
 Implements behavior for long division using the \code{divmod()} built in function, when \code{divmod(other, self)} is called.
