--- a/magicmethods.tex
+++ b/magicmethods.tex
@@ -244,7 +244,7 @@ Implements integer division with assignment using the \code{//=} operator.
 Implements division with assignment using the \code{/=} operator.
 \item[\code{__itruediv__(self, other)}]
 Implements _true_ division with assignment. Note that this only works when \code{from __future__ import division} is in effect.
-\item[\code{__imod_(self, other)}]
+\item[\code{__imod__(self, other)}]
 Implements modulo with assignment using the \code{\%=} operator.
 \item[\code{__ipow__}]
 Implements behavior for exponents with assignment using the \code{**=} operator.
